# cot-enem

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.test-tmp-cache-capacity/test_configuration_precedence0/: server.yaml
.test-tmp-cache-capacity/test_limit_scopes_existing_can0/: candidates.jsonl  output.jsonl  votes.jsonl
.test-tmp-cache-capacity/test_pipeline_writes_increment0/: output.jsonl
.test-tmp-cache-capacity/test_three_pass_ensemble_persi0/: candidates.jsonl  output.jsonl  votes.jsonl
.test-tmp-limit-e2e/test_configuration_error_names0/: bad.yaml
.test-tmp-limit-e2e/test_limit_scopes_existing_can0/: candidates.jsonl  output.jsonl  votes.jsonl
.test-tmp-limit-e2e/test_pipeline_writes_increment0/: output.jsonl
.test-tmp-limit-e2e/test_repository_records_invali0/: enem-2017.xml
.test-tmp-limit-e2e/test_three_pass_ensemble_persi0/: candidates.jsonl  output.jsonl  votes.jsonl
.test-tmp-notebook-bootstrap/test_pipeline_writes_increment0/: output.jsonl
config/: experiment.yaml  models.yaml  prompts.yaml
configs/: colab.yaml  cpu.yaml  default.yaml  gpu.yaml  local.yaml  server.yaml
docs/: EXECUCAO_COLAB.md  FASE4.md  FASE6.md  RELATORIO_FASE3_ENEM2017.md
notebooks/: fase3_colab.ipynb  fase4_colab.ipynb  fase6_analysis.ipynb
scripts/: prepare_dataset.py
src/cot_enem/: __init__.py  audit.py  cli.py  (+5 more)
tests/: test_audit.py  test_config.py  test_diagnostics.py  test_ensemble_pipeline.py  test_infrastructure.py  test_phase1.py  test_phase3.py  test_phase4_pipeline.py  test_phase6.py  test_prompting.py  test_providers.py
(+97 files in other folders)
