[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cot-enem"
version = "0.1.0"
description = "Pipeline reproduzível para construção do dataset CoT-ENEM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7,<3", "PyYAML>=6,<7"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<6", "ruff>=0.5,<1"]
huggingface = ["transformers>=4.44,<5", "torch>=2.3,<3"]

[project.scripts]
cot-enem = "cot_enem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cot_enem"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
